Fix bug where text was moving too low, bug reported by Jeff.
git-svn-id: https://www.redhotpenguin.com/svn/sl/trunk@1823 bd012f14-6cfe-0310-9a23-91b8f1fede10

--- a/SL/css/sl_text_ad.css
+++ b/SL/css/sl_text_ad.css
@@ -22,6 +22,7 @@ p.sl {
     margin: 0px;
     padding: 0px;
     line-height: normal;
+    clear: none;
 }
 
 .sl_code {
